Add venv39 to .gitignore and update project files